1 parte do projeto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="./assets/src/css/style.css">
 </head>
 <body>
-    
+    <section class="containe">
+        <section class="secao-primary">
+            <section class="secao-titulo">
+                <h1 class="titulo">Seja Bem Vindo</h1>
+            </section>
+
+            <section class="secao-imagem">
+                <figure>
+                    <img src="./assets/src/img/20220807_162427.jpg" alt="" class="imagem">
+                    <figcaption>@sirlanlobato</figcaption>
+                </figure>
+            </section>  
+        </section>
+          
+
+        <section class="secao-secundaria">
+            <section class="lista-links">
+                <ul class="lista">
+                    <li class="item-lista">
+                        <a href="" class="lista-link">
+                            <i class="icone"></i>
+                        </a>
+                    </li>
+                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
+                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
+                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
+                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
+                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
+                </ul>
+            </section>
+        </section>
+
+    </section>
 </body>
 </html>
