--- a/index.html
+++ b/index.html
@@ -27,15 +27,46 @@
             <section class="lista-links">
                 <ul class="lista">
                     <li class="item-lista">
-                        <a href="" class="lista-link">
-                            <i class="icone"></i>
+                        <a href="" class="links">
+                            <i class="icone-facebook"></i>
+                            Facebook
+                        </a>
+                    </li><!--1-->
+
+                    <li class="item-lista">
+                        <a href="" class="links">
+                            <i class="icone-instagran"></i>
+                            Instagran
                         </a>
                     </li>
-                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
-                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
-                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
-                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
-                    <li class="item-lista"><a href="" class="lista-link"><i class="icone"></i></a></li>
+
+                    <li class="item-lista">
+                        <a href="" class="links">
+                            <i class="icone-linkedin"></i>
+                            Linkedin
+                        </a>
+                    </li>
+
+                    <li class="item-lista">
+                        <a href="" class="links">
+                            <i class="icone-github"></i>
+                            Git-Hub
+                        </a>
+                    </li>
+
+                    <li class="item-lista">
+                        <a href="" class="links">
+                            <i class="icone-email"></i>
+                            Email
+                        </a>
+                    </li>
+
+                    <li class="item-lista">
+                        <a href="" class="links">
+                            <i class="icone-twiter"></i>
+                            Twiter
+                        </a>
+                    </li>
                 </ul>
             </section>
         </section>
