Adicionando a class icone a tag i para ser uma class global dos icones

--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
                 <ul class="lista">
                     <li class="item-lista">
                         <a href="" class="links">
-                            <i class="icone-facebook"></i>
+                            <i class="icone icone-facebook"></i>
                             Facebook
                         </a>
                     </li><!--1-->
 
                     <li class="item-lista">
                         <a href="" class="links">
-                            <i class="icone-instagran"></i>
+                            <i class="icone icone-instagran"></i>
                             Instagran
                         </a>
                     </li>
 
                     <li class="item-lista">
                         <a href="" class="links">
-                            <i class="icone-linkedin"></i>
+                            <i class="icone icone-linkedin"></i>
                             Linkedin
                         </a>
                     </li>
 
                     <li class="item-lista">
                         <a href="" class="links">
-                            <i class="icone-github"></i>
+                            <i class="icone icone-github"></i>
                             Git-Hub
                         </a>
                     </li>
 
                     <li class="item-lista">
                         <a href="" class="links">
-                            <i class="icone-email"></i>
-                            Email
+                            <i class="icone icone-email"></i>
+                            E - mail
                         </a>
                     </li>
 
                     <li class="item-lista">
                         <a href="" class="links">
-                            <i class="icone-twiter"></i>
+                            <i class="icone icone-twiter"></i>
                             Twiter
                         </a>
                     </li>
